test/test_checkstyle_fail.lin
// RUN: not %linc test %s 2>&1 | FileCheck %s

// CHECK: error: Function name 'myFunc' must be lower-case
// CHECK: error: Function argument 'argNum' must be lower-case
// CHECK: error: Variable name 'varA' must be lower-case
// CHECK: error: Function call 'myFunc' must be lower-case
// CHECK: Checkstyle and static analysis failed with 4 error(s).

myFunc: func [
    argNum [i32!]
    return: [i32!]
][
    varA: 10
    argNum
]

main: func [
    return: [i32!]
][
    myFunc 5
]